syntax = "proto3";

package protoai.v1;

import "google/protobuf/timestamp.proto";

// Informações do livro
message BookInfo {
    string title = 1;
    string author = 2;
    string description = 3;
    string drive_file_id = 4;
    repeated string tags = 5;
    string status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

// Informações do projeto
message ProjectInfo {
    string name = 1;
    string version = 2;
    string description = 3;
    repeated string tags = 4;
}

// Interface de acesso aos livros
message AccessInterface {
    enum IfType {
        UNDEFINED = 0;
        GOOGLE_DRIVE = 1;
        REST_HTTP = 2;
    }
    IfType type = 1;
    string base_url_or_address = 2;
    repeated string available_methods_or_operations = 3;
}

// Detalhes de comunicação
message CommunicationDetails {
    repeated AccessInterface access_interfaces = 1;
    repeated string default_data_formats = 2;
}

// Informações de segurança
message SecurityInfo {
    bool encryption_required = 1;
}

// Informações de monetização
message MonetizationInfo {
    enum ModelType {
        MODEL_TYPE_UNSPECIFIED = 0;
        FREE = 1;
        PAY_PER_USE = 2;
        SUBSCRIPTION = 3;
    }
    ModelType model_type = 1;
    string currency = 2;
    double base_price = 3;
    map<string, double> subscription_tiers = 4;
}

// Informações de licenciamento
message LicensingInfo {
    string license_type = 1;
    string terms_url = 2;
}

// Transação
message Transaction {
    string id = 1;
    string user_id = 2;
    string book_id = 3;
    double amount = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
}

// Permissão de usuário
message UserPermission {
    string user_id = 1;
    string book_id = 2;
    string permission_level = 3;
    google.protobuf.Timestamp valid_until = 4;
}

// Manifesto principal do serviço
message ReadmeProto {
    string intent = 1;
    ProjectInfo project_info = 2;
    CommunicationDetails communication_details = 3;
    SecurityInfo security_info = 4;
    MonetizationInfo monetization_info = 5;
    LicensingInfo licensing_info = 6;
    BookInfo book_info = 7;
}